# iscc-metagen

./: .editorconfig  .gitignore  CONVENTIONS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
iscc_metagen/: cli.py  client.py  gui.py  main.py  pages.py  pdf.py  prompt.py  schema.py  settings.py  text.py  thema.json  thema.py  utils.py  vdb.py
tests/: compare.py
